<resources>
    <string name="app_name">Astro</string>
    <string name="upvote">Upvote</string>
    <string name="downvote">Downvote</string>
    <string name="comments">Comments</string>
    <string name="share">Share</string>
    <string name="save">Save</string>
    <string name="unsave">Unsave</string>
    <string name="hide">Hide</string>
    <string name="unhide">Unhide</string>
    <string name="report">Report</string>
    <string name="order_best">Best</string>
    <string name="order_hot">Hot</string>
    <string name="order_new">New</string>
    <string name="order_top">Top</string>
    <string name="order_controversial">Controversial</string>
    <string name="order_rising">Rising</string>
    <string name="order_most_relevant">Most relevant</string>
    <string name="order_comment_count">Comment count</string>
    <string name="order_old">Old</string>
    <string name="order_qanda">Q&amp;A</string>
    <string name="order_random">Random</string>
    <string name="past_hour">Past hour</string>
    <string name="past_24_hours">Past 24 hours</string>
    <string name="past_week">Past week</string>
    <string name="past_month">Past month</string>
    <string name="past_year">Past year</string>
    <string name="all_time">All time</string>
    <string name="popular_tab_label">Popular</string>
    <string name="search_tab_label">Search</string>
    <string name="search_hint">Search…</string>
    <string name="subreddits">Subreddits</string>
    <string name="subreddit">Subreddit</string>
    <string name="multireddits">Multireddits</string>
    <string name="frontpage">Front Page</string>
    <string name="all">All</string>
    <string name="favorites">Favorites</string>
    <string name="search_title">Search: %s</string>
    <string name="home">Home</string>
    <string name="my_account">My Account</string>
    <string name="users">Users</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="add_account">Add account</string>
    <string name="reply">Reply</string>
    <string name="more_replies"><u>%d more replies</u></string>
    <string name="continue_to_thread"><u>Continue to thread</u></string>
    <string name="add_response">Add response…</string>
    <string name="view_all_comments">View all comments</string>
    <string name="you_are_viewing_a_single_thread">You are viewing a single thread</string>
    <string name="post_has_no_text">Post has no text.</string>
    <string name="overview">Overview</string>
    <string name="about">About</string>
    <string name="submitted">Submitted</string>
    <string name="posts">Posts</string>
    <string name="saved">Saved</string>
    <string name="hidden">Hidden</string>
    <string name="upvoted">Upvoted</string>
    <string name="downvoted">Downvoted</string>
    <string name="gilded">Gilded</string>
    <string name="friends">Friends</string>
    <string name="blocked">Blocked</string>
    <string name="karma">Karma</string>
    <string name="reddit_age">Reddit Age</string>
    <string name="view_profile">View Profile</string>
    <string name="account_error">Unable to retrieve account. User may have been removed.</string>
    <string name="add_friend">Add friend</string>
    <string name="block">Block</string>
    <string name="unfriend">Unfriend</string>
    <string name="unblock">Unblock</string>
    <string name="public_feeds">Public Feeds</string>
    <string name="moderated_subs">Moderated Subreddits</string>
    <string name="awards">Awards</string>
    <string name="unable_to_subscribe">Unable to subscribe to %s</string>
    <string name="share_link">Share link</string>
    <string name="share_comments">Share comments</string>
    <string name="crosspost">Crosspost</string>
    <string name="share_title_link">Share title + link</string>
    <string name="share_shortlink">Share shortlink</string>
    <string name="share_text">Share Text</string>
    <string name="post_to_subreddit">Post to Subreddit</string>
    <string name="open_link">Open link</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="copy_link">Copy link</string>
    <string name="link_copied">Link copied</string>
    <string name="report_dialog_title">Which rule does this break?</string>
    <string name="other_rule_broken_description">Describe rule broken</string>
    <string name="posts_and_comments">Posts and comments</string>
    <string name="share_subject_message">Check this out</string>
    <string name="downloading">Downloading…</string>
    <string name="download_complete">Download complete</string>
    <string name="download_status_notification_name">Download Status</string>
    <string name="unable_to_download_file">Unable to download file</string>
    <string name="unable_to_download_album">Unable to download album</string>
    <string name="download">Download</string>
    <string name="download_all">Download all</string>
    <string name="open_link_externally">Open link externally</string>
    <string name="failed_to_view_post_content">Failed to view post content</string>
    <string name="inbox">Inbox</string>
    <string name="unread">Unread</string>
    <string name="sent">Sent</string>
    <string name="message">Message</string>
    <string name="to">To</string>
    <string name="subject">Subject</string>
    <string name="send_message">Send message…</string>
    <string name="save_draft_question">Save draft?</string>
    <string name="discard">Discard</string>
    <string name="mark_read">Mark read</string>
    <string name="mark_unread">Mark unread</string>
    <string name="create_custom_feed">Create Custom Feed</string>
    <string name="custom_feed_name">Custom Feed Name</string>
    <string name="description_optional">Description (Optional)</string>
    <string name="private_label">Private</string>
    <string name="public_label">Public</string>
    <string name="conflict_error">Custom feed conflicts with another</string>
    <string name="copy_multi">Copy</string>
    <string name="create_post">Create Post</string>
    <string name="rules">Rules</string>
    <string name="title">Title</string>
    <string name="text">Text</string>
    <string name="image">Image</string>
    <string name="link">Link</string>
    <string name="url">URL</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="no_rules_found">No rules found</string>
    <string name="required">Required</string>
    <string name="invalid">Invalid</string>
    <string name="text_hint">Text (Optional)</string>
    <string name="get_notifications">Get notifications</string>
    <string name="nsfw">NSFW</string>
    <string name="spoiler">Spoiler</string>
    <string name="op">OP</string>
    <string name="flair">Flair</string>
    <string name="edit_flair">Edit Flair</string>
    <string name="no_flair">No flair</string>
    <string name="no_flair_found">No flair found</string>
    <string name="unable_fetch_error">Unable to fetch error</string>
    <string name="url_already_posted">URL already posted. Resubmit?</string>
    <string name="resubmit">Resubmit</string>
    <string name="select_photo">Please select a photo</string>
    <string name="please_log_in">Please log in</string>
    <string name="must_be_logged_in">You must be logged in to do that</string>
    <string name="please_grant_necessary_permissions">Please grant necessary permissions</string>
    <string name="retry">Retry</string>
    <string name="my_subscriptions">My Subscriptions</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="subscribed">Subscribed</string>
    <string name="done">Done</string>
    <string name="send">Send</string>
    <string name="edit">Edit</string>
    <string name="more_options">More Options</string>
    <string name="downloading_album">Downloading Album</string>
    <string name="album_download_complete">Album Download Complete</string>
    <string name="unable_to_create_directory">Unable to create directory %s</string>
    <string name="unable_to_create_external_directory">Unable to create external directory. Please retry.</string>
    <string name="nothing_found">Nothing found.</string>
    <string name="no_posts_found">No posts found.</string>
    <string name="no_comments_found">No comments found.</string>
    <string name="no_messages_found">No messages found.</string>
    <string name="guest">Guest</string>
    <string name="other">Other</string>
    <string name="manage">Manage</string>
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="num_subscribers">%s subscribers</string>
    <string name="total_karma">Total Karma: %s</string>
    <string name="trending_subreddits">Trending Subreddits</string>
    <string name="view">View</string>
    <string name="no_description">No description.</string>
    <string name="post_removed_by_moderator">Post has been removed by a moderator.</string>
    <string name="post_removed_by_admin">Post has been removed by an admin.</string>
    <string name="post_removed">Post has been removed.</string>
    <string name="post_locked">Post locked.</string>
    <string name="num_awards">%d awards</string>
    <string name="user_does_not_exist">User does not exist</string>
    <string name="socket_timeout_error">Unable to connect to Reddit at this time. Please retry later.</string>
    <string name="unknown_host_exception">Please reconnect to the internet.</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="error_in_json_parsing">Error in JSON Parsing.</string>
    <string name="cannot_reply_to_comment">Cannot reply to comment</string>
    <string name="cannot_reply_to_post">Cannot reply to post</string>
    <string name="dark_mode_settings_category_title">Dark mode settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="use_system_settings">Use system settings</string>
    <string-array name="dark_mode_entries">
        <item>Off</item>
        <item>On</item>
        <item>@string/use_system_settings</item>
    </string-array>
    <string name="post_settings_title">Post Settings</string>
    <string name="nsfw_title">Show NSFW</string>
    <string name="nsfw_summary">Show posts with NSFW (Not Safe For Work) tag</string>
    <string name="blur_nsfw_title">Blur NSFW Thumbnails</string>
    <string name="default_post_sort_title">Default Post Sorting</string>
    <string-array name="post_sort_entries">
        <item>@string/order_best</item>
        <item>@string/order_hot</item>
        <item>@string/order_new</item>
        <item>@string/order_rising</item>
        <item>Controversial - Hour</item>
        <item>Controversial - Day</item>
        <item>Controversial - Week</item>
        <item>Controversial - Month</item>
        <item>Controversial - Year</item>
        <item>Controversial - All time</item>
        <item>Top - Hour</item>
        <item>Top - Day</item>
        <item>Top - Week</item>
        <item>Top - Month</item>
        <item>Top - Year</item>
        <item>Top - All time</item>
    </string-array>
    <string name="comment_settings_title">Comment Settings</string>
    <string name="default_comment_sorting_title">Default Comment Sorting</string>
    <string-array name="comment_sort_entries">
        <item>@string/order_best</item>
        <item>@string/order_top</item>
        <item>@string/order_new</item>
        <item>@string/order_controversial</item>
        <item>@string/order_old</item>
        <item>@string/order_qanda</item>
        <item>@string/order_random</item>
    </string-array>
</resources>