<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="post"
            type="dev.gtcl.reddit.models.reddit.listing.Post" />
        <variable
            name="model"
            type="dev.gtcl.reddit.ui.fragments.manage.ManagePostVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/nsfw_label"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:singleLine="true"
            android:text="@string/nsfw"
            android:gravity="center_vertical"
            android:paddingHorizontal="16dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@id/nsfw_checkbox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/nsfw_checkbox"
            app:layout_constraintBottom_toBottomOf="@id/nsfw_checkbox"/>

        <CheckBox
            android:id="@+id/nsfw_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="@{post.nsfw}"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/spoiler_label"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:singleLine="true"
            android:text="@string/spoiler"
            android:gravity="center_vertical"
            android:paddingHorizontal="16dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@id/nsfw_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/spoiler_checkbox"
            app:layout_constraintBottom_toBottomOf="@id/spoiler_checkbox"/>

        <CheckBox
            android:id="@+id/spoiler_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="@{post.spoiler}"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@id/nsfw_checkbox"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/notifications_label"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:singleLine="true"
            android:text="@string/get_notifications"
            android:gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:paddingHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@id/spoiler_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/notifications_checkbox"
            app:layout_constraintBottom_toBottomOf="@id/notifications_checkbox"/>

        <CheckBox
            android:id="@+id/notifications_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="@{post.sendReplies}"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@id/spoiler_checkbox"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/flair_label"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:singleLine="true"
            android:text="@string/flair"
            android:gravity="center_vertical"
            android:paddingHorizontal="16dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@id/notifications_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/flair_chip"
            app:layout_constraintBottom_toBottomOf="@id/flair_chip"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/flair_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:flair="@{model.flair}"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            style="@style/CustomChipChoice"
            app:layout_constraintTop_toBottomOf="@id/notifications_checkbox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:text="@string/no_flair"
            tools:chipBackgroundColor="@android:color/darker_gray"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>