<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="model"
            type="dev.gtcl.reddit.ui.fragments.create_post.CreatePostVM" />
        <variable
            name="crossPost"
            type="dev.gtcl.reddit.models.reddit.listing.Post"/>
        <import type="android.view.View"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="?android:attr/colorBackground">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:menu="@menu/send"
                app:navigationIcon="@drawable/ic_x_24"
                app:title="@{crossPost == null ? @string/create_post : @string/crosspost}" />

        </androidx.cardview.widget.CardView>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nested_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/subreddit_text_input_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:hint="@string/subreddit"
                        app:layout_constraintEnd_toStartOf="@id/rules_button"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textview.MaterialAutoCompleteTextView
                            android:id="@+id/subreddit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:maxLines="1" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/rules_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:text="@string/rules"
                        app:layout_constraintBottom_toBottomOf="@id/subreddit_text_input_layout"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/subreddit_text_input_layout"
                        app:layout_constraintTop_toTopOf="@id/subreddit_text_input_layout" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/title_text_input_layout"
                        android:layout_width="0dp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginVertical="16dp"
                        app:counterEnabled="true"
                        app:counterMaxLength="300"
                        app:layout_constraintBottom_toTopOf="@id/chip_group"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/subreddit_text_input_layout">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/title_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/title"
                            android:maxLines="3" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chip_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/title_text_input_layout">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/get_notifications_chip"
                            style="@style/CustomChipChoice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/get_notifications" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/nsfw_chip"
                            style="@style/CustomChipChoice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nsfw" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/spoiler_chip"
                            style="@style/CustomChipChoice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/spoiler" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/flair_chip"
                            style="@style/CustomChipChoice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/no_flair"
                            app:flair="@{model.flair}"
                            tools:text="@string/flair"/>

                    </com.google.android.material.chip.ChipGroup>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tab_layout"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:tabMode="fixed"
                    app:tabGravity="fill"
                    android:visibility="@{crossPost == null ? View.VISIBLE : View.GONE}"/>

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/view_pager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tab_layout"
                    android:visibility="@{crossPost == null ? View.VISIBLE : View.GONE}"/>

                <include
                    android:id="@+id/cross_post_layout"
                    layout="@layout/layout_crosspost"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_margin="8dp"
                    app:post="@{crossPost}"
                    app:moreOptions="@{false}"
                    android:visibility="@{crossPost != null ? View.VISIBLE : View.GONE}"/>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</layout>
