<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="model"
            type="dev.gtcl.reddit.ui.fragments.inbox.ComposeVM" />
        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/message"
                app:navigationIcon="@drawable/ic_x_24"
                app:menu="@menu/send"/>

        </com.google.android.material.appbar.AppBarLayout>

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
            android:indeterminate="true"
            android:visibility="@{model.isLoading() ? View.VISIBLE : View.GONE}"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/app_bar_layout">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/to_input_layout"
                android:layout_width="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_height="wrap_content"
                android:hint="@string/to">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/to_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/subject_input_layout"
                android:layout_width="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="100"
                android:hint="@string/subject">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/subject_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="3" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/message_input_layout"
                android:layout_width="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_height="wrap_content"
                android:hint="@string/send_message">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/message_text"
                    android:inputType="textMultiLine"
                    android:layout_width="match_parent"
                    android:gravity="top|start"
                    android:maxLines="10"
                    android:scrollbars="vertical"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>